# news_agent_consorcio

./: .env  .gitignore  Dockerfile  README.md  app.py  google_searcher.py  graph_definition.py  llm_factory.py  main.py  pyproject.toml  salvar_relatorio_pdf.py  searcher_gemini.py  test_tavily.py
cred/: serv_account_credencials.json
formatacao/: html_pdf.html  salvar_relatorio_pdf.py
nodes/: format_editorial.py  merge_results.py  merged_content.py  request_review.py  review_llm.py  search_all.py  search_bcb.py  search_consorcios.py  search_generic.py  search_macro.py
results/results_md/: relatorio.md  relatorio_02-07-2025.md  relatorio_03-06-2025.md  relatorio_04-06-2025.md  relatorio_05-06-2025.md  relatorio_06-06-2025.md  relatorio_07-07-2025.md  relatorio_09-07-2025.md  relatorio_13-06-2025.md  relatorio_14-07-2025.md  relatorio_15-07-2025.md  relatorio_16-06-2025.md  relatorio_17-07-2025.md  relatorio_18-06-2025.md  relatorio_21-07-2025.md  relatorio_21-08-2025.md  relatorio_23-06-2025.md  relatorio_24-06-2025.md  test_relatorio.md
test/: test_gemini.py  test_search.py  test_tavily.py
tests/: test_gemini.py  test_node.py  test_scraper.py  test_serper.py  teste_llm.py
tests/acceptance/: test_end_to_end_news_agent.py
tests/formatacao/: preview_relatorio.html  test_preview_relatorio.py
tests/integration/: test_graph_definition_integration.py  test_pdf_generation_integration.py
tests/tests/_artifacts/: consorcios_enriquecidos_live.json
tests/unit/: test_llm_factory.py  test_searcher_serper.py
utils/: llm_factory.py  scraper.py  search_ddgs.py  search_serper.py
