[project]
name = "news-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "langchain>=0.3.25",
    "langchain-groq>=0.3.2",
    "langgraph>=0.4.7",
    "markdown>=3.8",
    "reportlab>=4.4.1",
    "weasyprint>=65.1",
]
